--- a/locales/en.json
+++ b/locales/en.json
@@ -7,6 +7,7 @@
     "becomeMember": "Become Member",
     "getInvolved": "Get Involved",
     "contact": "Contact",
+    "contribute": "Contribute",
     "join": "Join",
     "login": "Login",
     "dashboard": "Member Portal",
