--- a/locales/fr.json
+++ b/locales/fr.json
@@ -7,6 +7,7 @@
     "becomeMember": "Devenir Membre",
     "getInvolved": "S'Impliquer",
     "contact": "Contact",
+    "contribute": "Contribuer",
     "join": "Rejoindre",
     "login": "Se connecter",
     "dashboard": "Portail Membre",
